--- a/RublenX.RespuestasRapidas/WpfAppFrk/MainWindow.xaml
+++ b/RublenX.RespuestasRapidas/WpfAppFrk/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfAppFrk"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid>
-        
+        <Label x:Name="lblEjemplo" Content="Vacio" HorizontalAlignment="Left" Margin="259,97,0,0" VerticalAlignment="Top"/>
+
     </Grid>
 </Window>
